<resources>
    <string name="app_name">TimeZen</string>

    <!-- Tela de Principal: List Plans -->
    <string name="text_title_home">Bem-vindo(a) ao TimeZen</string>
    <string name="text_icon_home">Home</string>
    <string name="text_icon_report">Report</string>
    <string name="text_icon_info">Information</string>
    <string name="text_description_fab">Botão de Adicionar novo Plano</string>

    <string name="text_icon_back">Back</string>
    <string name="title_information">Informações</string>
    <string name="title_form_plan">Adicionar Novo Plano</string>

    <!-- Tela de Relatório: Report Plans -->
    <string name="text_title_report">Relatório de Planos</string>
    <string name="text_button_report">Consultar Relatório</string>
    <string name="textButton_save_plan">Salvar</string>
    <string name="textButton_back">Voltar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_selected_plan">SelectedPlanActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="button_stop_plan">Parar</string>
    <string name="timer_finished">00:00:00</string>
    <string name="nice">se essa porra n�o funcionar eu nao sei mais o que vai fazer isso funcionar</string>
    <string name="text_title_burnout">Síndrome de Burnout</string>
    <string name="text_information">Síndrome de Bournout ou Síndrome do Esgotamento Profissional é um distúrbio emocional com sintomas de exaustão extrema, estresse e esgotamento físico resultante de situações de trabalho desgastante, que demandam muita competitividade ou responsabiblidade. A principal causa da doença é justamente o excesso de trabalho e ou estudo. Esta síndrome é comum em estudantes e profissionais que atuam diariamente sob pressão e com resposabilidades constantes, como médicos, enfermeiros, professores, policiais, jornalistas, dentre outros.</string>
    <string name="text_second_information">A Síndrome de Burnout também pode acontecer quando o profissional planeja ou é pautado para objetivos de trabalho muito difíceis, situações em que a pessoa possa achar, por algum motivo, não ter capaciadades suficientes para os cumprir. Também é comum com estudantes em épocas preparatórias de grandes provas. Essa síndrome pode resultar em estado de depressão profunda e por isso é essencial procurar apoio profissional no surgimento dos primeiros sintomas.</string>
    <string name="text_third_information">A Síndrome de Burnnout envolve nervosismo, sofrimentos psicológios e problemas físicos, como dor de barriga, cansaço, execessio e tonturas. O estresse e a falta de vontade de sair da cama ou de casa, quando constantes, podem indicar, o início da doença. Os principais sinais e sintomas que podem indicar a Síndrome de Burnout são:</string>
</resources>