<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".activities.InformationActivity" >

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_information"
            android:layout_width="match_parent"
            android:background="@color/grey_200"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:title="@string/title_information" />

        <TextView
            android:id="@+id/text_title_information"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginTop="16dp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/toolbar_information"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/text_information"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/text_title_burnout"
            android:textSize="@dimen/font_larger"/>

        <TextView
            android:id="@+id/text_information"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_normal"
            app:layout_constraintTop_toBottomOf="@id/text_title_information"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/text_information_2"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/text_information"
            android:textSize="@dimen/font_larger" />

        <TextView
            android:id="@+id/text_information_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_normal"
            app:layout_constraintTop_toBottomOf="@id/text_information"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/text_information_3"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/text_second_information"
            android:textSize="@dimen/font_larger" />

        <TextView
            android:id="@+id/text_information_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_normal"
            app:layout_constraintTop_toBottomOf="@id/text_information_2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/linearLayout_sindrome"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/text_third_information"
            android:textSize="@dimen/font_larger" />

        <LinearLayout
            android:id="@+id/linearLayout_sindrome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="@dimen/spacing_normal"
            app:layout_constraintTop_toBottomOf="@id/text_information_3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/font_large"
                android:text="Cansaço excessivo, físico e mental;"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/font_large"
                android:text="Dor de cabeça frequente;"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/font_large"
                android:text="Alterações no apetite;"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/font_large"
                android:text="Dificuldades de concentração;"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/font_large"
                android:text="Sentimentos de fracasso e insegurança;"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/font_large"
                android:text="Negatividade constante;"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/font_large"
                android:text="Sentimentos de derrota e desesperança;"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/font_large"
                android:text="Sentimentos de incompetência;"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/font_large"
                android:text="Alterações repentinas de humor;"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/font_large"
                android:text="Isolamento;"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/font_large"
                android:text="Fadiga;"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/font_large"
                android:text="Pressão alta;"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/font_large"
                android:text="Dores musculares;"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/font_large"
                android:text="Problemas gastrointestinais;"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/font_large"
                android:text="Alteração nos batimentos cardíacos;"/>

        </LinearLayout>

        <TextView
            android:id="@+id/text_title_metodo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textStyle="bold"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/linearLayout_sindrome"
            android:textSize="@dimen/font_larger"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="Método Pomodoro"/>

        <TextView
            android:id="@+id/text_information_4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_normal"
            app:layout_constraintTop_toBottomOf="@id/text_title_metodo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/text_information_metodo"
            android:textSize="@dimen/font_larger" />

        <LinearLayout
            android:id="@+id/linearLayout_metodo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="@dimen/spacing_normal"
            app:layout_constraintTop_toBottomOf="@id/text_information_4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/button_back_information"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/font_large"
                android:text="1 - Escolha a tarefa que será executada"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/font_large"
                android:text="2 - Defina o temporizador para 25 minutos."/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/font_large"
                android:text="3 - Foque na tarefa até ouvir a notificação."/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/font_large"
                android:text="4 - Anote o horário em que você terminou o pomodoro."/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/font_large"
                android:text="5 - Faça uma pequena pausa, começando com 5 minutos, ou apenas 2, se preferir."/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/font_large"
                android:text="6 - Depois de 4 pomodoros, faça um pausa mais longa, geralmente de 15 a 30 minutos."/>
        </LinearLayout>

        <Button
            android:id="@+id/button_back_information"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textButton_back"
            android:textSize="@dimen/font_larger"
            android:layout_margin="@dimen/spacing_normal"
            android:backgroundTint="@color/blue_500"
            app:layout_constraintTop_toBottomOf="@id/linearLayout_metodo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>