<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" >

    <data />
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.FormPlanActivity">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_form_plan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/grey_200"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:title="@string/title_form_plan" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout_name_plan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_normal"
            app:layout_constraintTop_toBottomOf="@id/toolbar_form_plan"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_edit_plan_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Nome do Plano"
                android:imeOptions="actionDone"
                android:inputType="text"/>

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/linearLayout_time_plan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/textInputLayout_name_plan"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:orientation="horizontal"
            android:baselineAligned="false">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout_work_plan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="@dimen/spacing_normal">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/text_edit_plan_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Tempo do Plano"
                    android:imeOptions="actionDone"
                    android:inputType="number" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout_break_plan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="@dimen/spacing_normal"
                android:layout_marginTop="16dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/text_edit_plan_break"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Tempo de Descanso"
                    android:imeOptions="actionDone"
                    android:inputType="number" />

            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout_category_plan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_normal"
            app:layout_constraintTop_toBottomOf="@id/linearLayout_time_plan"
            app:layout_constraintEnd_toEndOf="parent"
            android:hint="Categoria do Plano"
            app:layout_constraintStart_toStartOf="parent"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">

            <AutoCompleteTextView
                android:id="@+id/autoCompleteTextView_category_plan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                tools:ignore="LabelFor" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout_importanceLevel_plan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_normal"
            app:layout_constraintTop_toBottomOf="@id/textInputLayout_category_plan"
            app:layout_constraintEnd_toEndOf="parent"
            android:hint="Nível de Importância do Plano"
            app:layout_constraintStart_toStartOf="parent"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">

            <AutoCompleteTextView
                android:id="@+id/autoCompleteTextView_importanceLevel_plan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                tools:ignore="LabelFor" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout_task_plan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_normal"
            app:layout_constraintTop_toBottomOf="@id/textInputLayout_importanceLevel_plan"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_edit_plan_repeat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Repetições do Plano"
                android:imeOptions="actionDone"
                android:inputType="number"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/button_save_plan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_normal"
            android:text="@string/textButton_save_plan"
            android:textSize="@dimen/font_larger"
            android:backgroundTint="@color/blue_500"
            app:layout_constraintTop_toBottomOf="@id/textInputLayout_task_plan"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/button_back_plan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_normal"
            android:text="@string/textButton_back"
            android:textSize="@dimen/font_larger"
            android:backgroundTint="@color/blue_500"
            app:layout_constraintTop_toBottomOf="@id/button_save_plan"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>